# ollamarama-matrix

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.json  docker-compose.yml  help.md  help.txt  launcher.py  models.json  models.md  ollamarama.py  pyproject.toml  requirements.txt  verification.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dockerhub.yml  pypi-publish.yml
docs/: ai-output-disclaimer.md  architecture.md  cli.md  commands.md  configuration.md  development.md  docker.md  getting-started.md  index.md  legacy-map.md  migration.md  not-a-companion.md  ollama.md  operations.md  refactor-plan.md  security.md  tools-and-mcp.md  verification.md
legacy/: README.md  ollamarama.py
legacy/no-e2e/: config.json
no-e2e/: ollamarama.py
ollamarama/: __init__.py  __main__.py  app.py  app_context.py  app_router.py  app_runtime.py  cli.py  config.py  exceptions.py  fastmcp_client.py  history.py  interfaces.py  logging_conf.py  markdown_utils.py  matrix_client.py  ollama_client.py  security.py
ollamarama/handlers/: __init__.py  cmd_ai.py  cmd_help.py  cmd_model.py  cmd_prompt.py  cmd_reset.py  cmd_thinking.py  cmd_verbose.py  cmd_x.py  router.py
ollamarama/tools/: __init__.py  math.py  schema.json  text.py  utils.py  weather.py  web.py
ollamarama_matrix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app_run.py  test_cli.py  test_config.py  test_config_more.py  test_handlers_errors.py  test_handlers_model_ai_help.py  test_handlers_reset_prompt_x.py  test_history.py  test_matrix_client_wrapper.py  test_ollama_client.py  test_render.py  test_router.py  test_router_more.py  test_security.py  test_tools_mcp.py
