[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamarama-matrix"
version = "1.2.1"
description = "Matrix chatbot powered by Ollama"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Dustin Whyte" }]
license = { file = "LICENSE" }
keywords = ["matrix", "chatbot", "ollama", "ai", "llm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: No Input/Output (Daemon)",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "matrix-nio[e2e]",
  "markdown",
  "requests",
  "rich",
]

[project.urls]
Homepage = "https://github.com/h1ddenpr0cess20/ollamarama-matrix"
Repository = "https://github.com/h1ddenpr0cess20/ollamarama-matrix"
Issues = "https://github.com/h1ddenpr0cess20/ollamarama-matrix/issues"

[project.scripts]
ollamarama-matrix = "ollamarama.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ollamarama*"]

[tool.setuptools.package-data]
"ollamarama.tools" = ["schema.json"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]
testpaths = ["tests"]
asyncio_mode = "auto"
